[project]
name = "hyping"
version = "0.1.0"
description = "High performance async ICMP scanner for macOS"
requires-python = ">=3.10"

dependencies = [
    "ruff",
    "scapy",
]

[project.scripts]
hyping = "hyping.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
